--- a/uicorektest/src/main/res/layout/activity_imagek.xml
+++ b/uicorektest/src/main/res/layout/activity_imagek.xml
@@ -10,7 +10,7 @@
         android:orientation="vertical">
 
         <com.google.android.material.button.MaterialButton
-            style="@style/BtnStyle"
+            style="@style/Btn_Style"
             android:onClick="goImageKBindingAdapter"
             android:text="goImageKBindingAdapter"
             tools:ignore="HardcodedText,UsingOnClickInXml" />
