--- a/uicorek/src/main/res/values/attrs.xml
+++ b/uicorek/src/main/res/values/attrs.xml
@@ -474,11 +474,11 @@
             <enum name="left" value="3" />
             <enum name="right" value="5" />
         </attr>
-        <attr name="viewKWheel_textSize" format="dimension" />
-        <attr name="viewKWheel_textColorOut" format="color" />
-        <attr name="viewKWheel_textColorCenter" format="color" />
-        <attr name="viewKWheel_dividerColor" format="color" />
-        <attr name="viewKWheel_dividerWidth" format="dimension" />
+        <attr name="viewKWheel_textSize" format="dimension|reference" />
+        <attr name="viewKWheel_textColorOut" format="color|reference" />
+        <attr name="viewKWheel_textColorCenter" format="color|reference" />
+        <attr name="viewKWheel_dividerColor" format="color|reference" />
+        <attr name="viewKWheel_dividerWidth" format="dimension|reference" />
         <attr name="viewKWheel_lineSpacingMultiplier" format="float" />
     </declare-styleable>
 
