--- a/uicorektest/src/main/res/layout/activity_layoutk_grid_fill.xml
+++ b/uicorektest/src/main/res/layout/activity_layoutk_grid_fill.xml
@@ -20,7 +20,11 @@
             <com.mozhimen.uicorek.layoutk.LayoutKGridFill
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/black" />
+                android:background="@color/black"
+                app:layoutKGridFill_gridColumnCount="15"
+                app:layoutKGridFill_innerLineWidth="2dp"
+                app:layoutKGridFill_gridColor="@color/black"
+                app:layoutKGridFill_gridRowCount="15"/>
         </com.mozhimen.uicorek.layoutk.LayoutKSquare>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
