--- a/uicorektest/src/main/res/layout/activity_layoutk_refresh.xml
+++ b/uicorektest/src/main/res/layout/activity_layoutk_refresh.xml
@@ -10,13 +10,13 @@
         android:orientation="vertical">
 
         <com.google.android.material.button.MaterialButton
-            style="@style/BtnStyle"
+            style="@style/Btn_Style"
             android:onClick="goLayoutKRefreshLottie"
             android:text="goLayoutKRefreshLottie"
             tools:ignore="HardcodedText,UsingOnClickInXml" />
 
         <com.google.android.material.button.MaterialButton
-            style="@style/BtnStyle"
+            style="@style/Btn_Style"
             android:onClick="goLayoutKRefreshText"
             android:text="goLayoutKRefreshText"
             tools:ignore="HardcodedText,UsingOnClickInXml" />
