--- a/uicorektest/src/main/res/layout/activity_layoutk_tab.xml
+++ b/uicorektest/src/main/res/layout/activity_layoutk_tab.xml
@@ -10,31 +10,31 @@
         android:orientation="vertical">
 
         <com.google.android.material.button.MaterialButton
-            style="@style/BtnStyle"
+            style="@style/Btn_Style"
             android:onClick="goLayoutKTabBottom"
             android:text="goLayoutKTabBottom"
             tools:ignore="HardcodedText,UsingOnClickInXml" />
 
         <com.google.android.material.button.MaterialButton
-            style="@style/BtnStyle"
+            style="@style/Btn_Style"
             android:onClick="goLayoutKTabBottomFragment"
             android:text="goLayoutKTabBottomFragment"
             tools:ignore="HardcodedText,UsingOnClickInXml" />
 
         <com.google.android.material.button.MaterialButton
-            style="@style/BtnStyle"
+            style="@style/Btn_Style"
             android:onClick="goLayoutKTabBottomLayout"
             android:text="goLayoutKTabBottomLayout"
             tools:ignore="HardcodedText,UsingOnClickInXml" />
 
         <com.google.android.material.button.MaterialButton
-            style="@style/BtnStyle"
+            style="@style/Btn_Style"
             android:onClick="goLayoutKTabTop"
             android:text="goLayoutKTabTop"
             tools:ignore="HardcodedText,UsingOnClickInXml" />
 
         <com.google.android.material.button.MaterialButton
-            style="@style/BtnStyle"
+            style="@style/Btn_Style"
             android:onClick="goLayoutKTabTopLayout"
             android:text="goLayoutKTabTopLayout"
             tools:ignore="HardcodedText,UsingOnClickInXml" />
