--- a/uicorektest/src/main/res/layout/activity_viewk.xml
+++ b/uicorektest/src/main/res/layout/activity_viewk.xml
@@ -17,19 +17,19 @@
             tools:context="com.mozhimen.uicorektest.viewk.ViewKActivity">
 
             <com.google.android.material.button.MaterialButton
-                style="@style/BtnStyle"
+                style="@style/Btn_Style"
                 android:onClick="goViewKSteps"
                 android:text="goViewKSteps"
                 tools:ignore="HardcodedText,UsingOnClickInXml" />
 
             <com.google.android.material.button.MaterialButton
-                style="@style/BtnStyle"
+                style="@style/Btn_Style"
                 android:onClick="goViewKViews"
                 android:text="goViewKViews"
                 tools:ignore="HardcodedText,UsingOnClickInXml" />
 
             <com.google.android.material.button.MaterialButton
-                style="@style/BtnStyle"
+                style="@style/Btn_Style"
                 android:onClick="goViewKWheel"
                 android:text="goViewKWheel"
                 tools:ignore="HardcodedText,UsingOnClickInXml" />
