--- a/uicorektest/src/main/res/values/values.xml
+++ b/uicorektest/src/main/res/values/values.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="BtnStyle">
+    <style name="Btn_Style">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginHorizontal" tools:targetApi="o">20dp</item>
@@ -14,7 +14,16 @@
         <item name="textAllCaps">false</item>
     </style>
 
-    <style name="DialogKAnim_Custom" parent="android:Animation">
+    <style name="Txt_Style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
+        <item name="android:textColor">@android:color/black</item>
+    </style>
+
+    <style name="DialogKQues_Anim_Custom" parent="android:Animation">
         <item name="android:windowEnterAnimation">@anim/animk_trans_top_show</item>
         <item name="android:windowExitAnimation">@anim/animk_trans_top_hide</item>
     </style>
