--- a/uicorektest/src/main/res/layout/activity_uicorek.xml
+++ b/uicorektest/src/main/res/layout/activity_uicorek.xml
@@ -15,6 +15,12 @@
 
             <com.google.android.material.button.MaterialButton
                 style="@style/Btn_Style"
+                android:onClick="goAdapterK"
+                android:text="goAdapterK"
+                tools:ignore="HardcodedText,UsingOnClickInXml" />
+
+            <com.google.android.material.button.MaterialButton
+                style="@style/Btn_Style"
                 android:onClick="goBtnK"
                 android:text="goBtnK"
                 tools:ignore="HardcodedText,UsingOnClickInXml" />
