--- a/basicktest/src/main/res/layout/fragment_elemk_gesture.xml
+++ b/basicktest/src/main/res/layout/fragment_elemk_gesture.xml
@@ -1,18 +1,17 @@
+<?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
-
-    </data>
+    <data />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center"
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/elemk_gesture_txt1"
+            android:id="@+id/elemk_gesture_fragment_txt1"
             android:layout_width="200dp"
             android:layout_height="100dp"
             android:layout_marginBottom="20dp"
@@ -22,7 +21,7 @@
             tools:ignore="HardcodedText" />
 
         <TextView
-            android:id="@+id/elemk_gesture_txt2"
+            android:id="@+id/elemk_gesture_fragment_txt2"
             android:layout_width="200dp"
             android:layout_height="100dp"
             android:layout_marginBottom="20dp"
@@ -31,14 +30,5 @@
             android:text="345"
             tools:ignore="HardcodedText" />
 
-        <fragment
-            android:id="@+id/elemk_gesture_fragment_container"
-            android:name="androidx.navigation.fragment.NavHostFragment"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            app:defaultNavHost="true" />
-
     </LinearLayout>
 </layout>
-
