--- a/basicktest/src/main/res/layout/activity_elemk_gesture.xml
+++ b/basicktest/src/main/res/layout/activity_elemk_gesture.xml
@@ -1,10 +1,8 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
-
-    </data>
+    <data />
 
     <LinearLayout
         android:layout_width="match_parent"
