--- a/uicorektest/src/main/res/layout/activity_layoutk_banner.xml
+++ b/uicorektest/src/main/res/layout/activity_layoutk_banner.xml
@@ -5,51 +5,63 @@
 
     <data />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <com.mozhimen.uicorek.layoutk.banner.LayoutKBanner
+            android:id="@+id/layoutk_banner_container"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:background="@android:color/darker_gray"
+            app:layoutKBanner_autoPlay="false"
+            app:layoutKBanner_loop="true"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:gravity="center"
+            android:orientation="horizontal">
 
-            <com.mozhimen.uicorek.layoutk.banner.LayoutKBanner
-                android:id="@+id/layoutk_banner_container"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:background="@android:color/darker_gray"
-                app:layoutKBanner_autoPlay="false"
-                app:layoutKBanner_loop="true"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <LinearLayout
+            <TextView
+                android:id="@+id/layoutk_banner_indicator"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
+                android:layout_marginEnd="10dp"
+                android:text="切换指示器"
+                tools:ignore="HardcodedText" />
 
-                <TextView
-                    android:id="@+id/layoutk_banner_indicator"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="10dp"
-                    android:text="切换指示器"
-                    android:textColor="@color/blue_theme"
-                    android:textSize="16sp"
-                    tools:ignore="HardcodedText" />
-
-                <Switch
-                    android:id="@+id/layoutk_banner_switch"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="是否自动播放"
-                    android:textColor="@color/blue_theme"
-                    android:textSize="16sp"
-                    tools:ignore="HardcodedText,UseSwitchCompatOrMaterialXml" />
-            </LinearLayout>
-
+            <Switch
+                android:id="@+id/layoutk_banner_switch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="是否自动播放"
+                tools:ignore="HardcodedText,UseSwitchCompatOrMaterialXml" />
         </LinearLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center">
+
+            <TextView
+                android:id="@+id/layoutk_banner_pre"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:text="上一个"
+                tools:ignore="HardcodedText" />
+
+            <TextView
+                android:id="@+id/layoutk_banner_next"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="下一个"
+                tools:ignore="HardcodedText" />
+        </LinearLayout>
+    </LinearLayout>
 
 </layout>
