--- a/componentktest/src/main/res/layout/item_navigatek.xml
+++ b/componentktest/src/main/res/layout/item_navigatek.xml
@@ -16,6 +16,6 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{item_navigatek.key}" />
+            android:text="@{item_navigatek.name}" />
     </FrameLayout>
 </layout>
