--- a/componentktest/src/main/res/layout/activity_componentk.xml
+++ b/componentktest/src/main/res/layout/activity_componentk.xml
@@ -22,6 +22,12 @@
 
             <com.google.android.material.button.MaterialButton
                 style="@style/BtnStyle"
+                android:onClick="goCameraK"
+                android:text="goCameraK"
+                tools:ignore="HardcodedText,UsingOnClickInXml" />
+
+            <com.google.android.material.button.MaterialButton
+                style="@style/BtnStyle"
                 android:onClick="goCameraXK"
                 android:text="goCameraXK"
                 tools:ignore="HardcodedText,UsingOnClickInXml" />
