--- a/basicktest/src/main/res/layout/activity_utilk.xml
+++ b/basicktest/src/main/res/layout/activity_utilk.xml
@@ -48,6 +48,12 @@
 
         <com.google.android.material.button.MaterialButton
             style="@style/BtnStyle"
+            android:onClick="goUtilKKeyBoard"
+            android:text="goUtilKKeyBoard"
+            tools:ignore="HardcodedText,UsingOnClickInXml" />
+
+        <com.google.android.material.button.MaterialButton
+            style="@style/BtnStyle"
             android:onClick="goUtilKScreen"
             android:text="goUtilKScreen"
             tools:ignore="HardcodedText,UsingOnClickInXml" />
