--- a/componentktest/src/main/res/layout/activity_componentk.xml
+++ b/componentktest/src/main/res/layout/activity_componentk.xml
@@ -40,14 +40,20 @@
 
             <com.google.android.material.button.MaterialButton
                 style="@style/BtnStyle"
+                android:onClick="goNavigateK"
+                android:text="goNavigateK"
+                tools:ignore="HardcodedText,UsingOnClickInXml" />
+
+            <com.google.android.material.button.MaterialButton
+                style="@style/BtnStyle"
                 android:onClick="goNetK"
                 android:text="goNetK"
                 tools:ignore="HardcodedText,UsingOnClickInXml" />
 
             <com.google.android.material.button.MaterialButton
                 style="@style/BtnStyle"
-                android:onClick="goNavigateK"
-                android:text="goNavigateK"
+                android:onClick="goVideoK"
+                android:text="goVideoK"
                 tools:ignore="HardcodedText,UsingOnClickInXml" />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
