--- a/underlayktest/src/main/res/layout/activity_logk.xml
+++ b/underlayktest/src/main/res/layout/activity_logk.xml
@@ -7,8 +7,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context=".logk.LogKActivity">
+        android:orientation="vertical">
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/logk_btn_print"
