--- a/app/src/main/res/layout/activity_demo.xml
+++ b/app/src/main/res/layout/activity_demo.xml
@@ -2,16 +2,14 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <data>
-
-    </data>
+    <data/>
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center">
 
-        <com.mozhimen.uicorek.layoutk.LayoutKBlur
+        <com.mozhimen.uicorek.layoutk.blur.LayoutKBlur
             android:id="@+id/demo_bg"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -20,7 +18,7 @@
             app:layoutKBlurred_isMove="true"/>
         
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/demo_list"
+            android:id="@+id/demo_recycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior" />
