--- a/basicktest/src/main/res/layout/activity_utilk_bitmap.xml
+++ b/basicktest/src/main/res/layout/activity_utilk_bitmap.xml
@@ -8,8 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        tools:context=".utilk.UtilKBitmapActivity">
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/utilK_bitmap_img"
@@ -17,7 +16,8 @@
             android:layout_height="60dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="ContentDescription" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -27,19 +27,22 @@
             <ImageView
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:src="@mipmap/utilk_img" />
+                android:src="@mipmap/utilk_img"
+                tools:ignore="ContentDescription" />
 
             <ImageView
                 android:id="@+id/utilk_bitmap_img_bmp_zoom"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:src="@mipmap/utilk_img" />
+                android:src="@mipmap/utilk_img"
+                tools:ignore="ContentDescription" />
 
             <ImageView
                 android:id="@+id/utilk_bitmap_img_bmp_scale"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:src="@mipmap/utilk_img" />
+                android:src="@mipmap/utilk_img"
+                tools:ignore="ContentDescription" />
         </LinearLayout>
 
         <TextView
@@ -65,5 +68,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:progress="50" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/utilk_bitmap_btn_save"
+            style="@style/BtnStyle"
+            android:text="UtilKBitmap(保存到相册)"
+            tools:ignore="HardcodedText" />
     </LinearLayout>
 </layout>
